--- a/style.css
+++ b/style.css
@@ -8,16 +8,12 @@ body {
 	background-repeat: no-repeat;
 	margin: 0;
 }
+.clearfix {
+	overflow: hidden;
+}
 #logo {
 	height: 90px;
 	width: 100%;
-}	
-.clearfix::after,
-.page_info::after,
-.content::after {
-	content:"";
-	display: table;
-	clear: both;
 }
 .page_info {
 	margin: 0 auto;
@@ -79,7 +75,6 @@ body {
 	display: flex;
 	padding-left: 100px;
 	padding-right: 100px;
-
 }
 .content_photo {
 	float: left;
